explorer: fix darkmode on firefox
Firefox appears not to propagate click and hover events on disabled
buttons, so this works around it.

--- a/public/scss/themes.scss
+++ b/public/scss/themes.scss
@@ -142,6 +142,10 @@ body.darkBG {
     }
   }
 
+  #menu .menu-form:hover .menu-item {
+    color: $dark-link-hover-color;
+  }
+
   #menu {
     background: #2a2a2a;
     box-shadow: 0 0 0 1px #fff3;
